; ModuleID = '/home/carl/AnghaBench/sway/sway/extr_xdg_decoration.c_xdg_decoration_handle_destroy.c'
source_filename = "/home/carl/AnghaBench/sway/sway/extr_xdg_decoration.c_xdg_decoration_handle_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_xdg_decoration = type { i32, %struct.TYPE_6__, %struct.TYPE_5__, %struct.TYPE_4__* }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { i32 }
%struct.TYPE_4__ = type { i32* }
%struct.wl_listener = type { i32 }

@destroy = common dso_local global i32 0, align 4
@deco = common dso_local global %struct.sway_xdg_decoration* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wl_listener*, i8*)* @xdg_decoration_handle_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xdg_decoration_handle_destroy(%struct.wl_listener* %0, i8* %1) #0 {
  %3 = alloca %struct.wl_listener*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.sway_xdg_decoration*, align 8
  store %struct.wl_listener* %0, %struct.wl_listener** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.wl_listener*, %struct.wl_listener** %3, align 8
  %7 = load %struct.sway_xdg_decoration*, %struct.sway_xdg_decoration** %5, align 8
  %8 = ptrtoint %struct.sway_xdg_decoration* %7 to i32
  %9 = load i32, i32* @destroy, align 4
  %10 = call %struct.sway_xdg_decoration* @wl_container_of(%struct.wl_listener* %6, i32 %8, i32 %9)
  store %struct.sway_xdg_decoration* %10, %struct.sway_xdg_decoration** %5, align 8
  %11 = load %struct.sway_xdg_decoration*, %struct.sway_xdg_decoration** %5, align 8
  %12 = getelementptr inbounds %struct.sway_xdg_decoration, %struct.sway_xdg_decoration* %11, i32 0, i32 3
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %14 = icmp ne %struct.TYPE_4__* %13, null
  br i1 %14, label %15, label %20

15:                                               ; preds = %2
  %16 = load %struct.sway_xdg_decoration*, %struct.sway_xdg_decoration** %5, align 8
  %17 = getelementptr inbounds %struct.sway_xdg_decoration, %struct.sway_xdg_decoration* %16, i32 0, i32 3
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  store i32* null, i32** %19, align 8
  br label %20

20:                                               ; preds = %15, %2
  %21 = load %struct.sway_xdg_decoration*, %struct.sway_xdg_decoration** %5, align 8
  %22 = getelementptr inbounds %struct.sway_xdg_decoration, %struct.sway_xdg_decoration* %21, i32 0, i32 2
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 0
  %24 = call i32 @wl_list_remove(i32* %23)
  %25 = load %struct.sway_xdg_decoration*, %struct.sway_xdg_decoration** %5, align 8
  %26 = getelementptr inbounds %struct.sway_xdg_decoration, %struct.sway_xdg_decoration* %25, i32 0, i32 1
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i32 0, i32 0
  %28 = call i32 @wl_list_remove(i32* %27)
  %29 = load %struct.sway_xdg_decoration*, %struct.sway_xdg_decoration** %5, align 8
  %30 = getelementptr inbounds %struct.sway_xdg_decoration, %struct.sway_xdg_decoration* %29, i32 0, i32 0
  %31 = call i32 @wl_list_remove(i32* %30)
  %32 = load %struct.sway_xdg_decoration*, %struct.sway_xdg_decoration** %5, align 8
  %33 = call i32 @free(%struct.sway_xdg_decoration* %32)
  ret void
}

declare dso_local %struct.sway_xdg_decoration* @wl_container_of(%struct.wl_listener*, i32, i32) #1

declare dso_local i32 @wl_list_remove(i32*) #1

declare dso_local i32 @free(%struct.sway_xdg_decoration*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
